# storage-hub-runtime-poc

./: Dockerfile  README.md  compose.yaml  customSpec.json
.github/workflows/: check.yml  client.yml  runtime.yml
pallets/file-system/: Cargo.toml
pallets/file-system/src/: lib.rs  mock.rs  tests.rs  types.rs  utils.rs
pallets/identity/src/: lib.rs  tests.rs
runtime/: Cargo.toml
storagehub-client-node/: .dockerignore  Cargo.toml  Dockerfile  README.md  lorem
storagehub-client-node/files-to-upload/: lorem  lorem-2  lorem-3  lorem-4
storagehub-client-node/metadata/: local.scale
storagehub-client-node/src/: client.rs  config.rs  errors.rs  main.rs  network.rs  options.rs
storagehub-client-node/src/lightclient/: client.rs  errors.rs  local.rs  mod.rs  support.rs
storagehub-client-node/src/p2p/: commands.rs  identify.rs  mod.rs  request_response.rs  service.rs  swarm.rs  tests.rs
storagehub-client-node/src/runtimes/: local.rs  mod.rs  support.rs
storagehub-client-node/src/swarming/: commands.rs  identify.rs  request_response.rs  service.rs  swarm.rs  tests.rs
storagehub-runtime/: Dockerfile  customSpecRaw.json
storagehub-runtime/node/src/: chain_spec.rs
storagehub-runtime/pallets/file-system/: Cargo.toml
storagehub-runtime/pallets/file-system/src/: lib.rs  mock.rs  tests.rs  types.rs  utils.rs
storagehub-runtime/pallets/identity/: Cargo.toml
storagehub-runtime/pallets/identity/src/: mock.rs
storagehub-runtime/runtime/src/: lib.rs
