[package]
name = "storagehub-client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.4.8", features = ["derive"] }
async-trait = "0.1"
async-std = { version = "1.11.0", features = ["attributes", "tokio1"] }
futures = "0.3.29"
libp2p = { version = "0.53.1", features = [
    "async-std",
    "dns",
    "kad",
    "cbor",
    "identify",
    "request-response",
    "macros",
    "noise",
    "tcp",
    "websocket",
    "yamux",
] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
smoldot-light = "0.12.0"
jsonrpsee = { version = "0.20.3", features = ["jsonrpsee-core"] }
jsonrpsee-core = { version = "0.20.3", features = ["client"] }
thiserror = "1.0.50"
tokio-stream = "0.1.14"
tokio = "1.34.0"
serde_json = "1.0.108"
subxt = { version = "0.32.1", features = [
    "unstable-light-client",
    "jsonrpsee",
    "substrate-compat",
] }
subxt-signer = "0.32.1"
codec = { package = "parity-scale-codec", version = "3.6.5", default-features = false, features = [
    "derive",
    "full",
    "bit-vec",
] }
url = "2.5.0"
dotenv = "0.15.0"
envy = "0.4.2"
sp-core = "26.0.0"
bounded-collections = "0.1.8"
