[package]
name = "storagehub-client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-std = { version = "1.12.0", features = ["attributes"] }
clap = { version = "4.4.11", features = ["derive"] }
futures = "0.3.29"
lazy_static = "1.4.0"
libp2p = { version = "0.53.2", features = [
    "tcp",
    "tls",
    "dns",
    "tokio",
    "noise",
    "yamux",
    "websocket",
    "ping",
    "macros",
    "identify",
    "cbor",
    "request-response",
] }
serde = { version = "1.0.193", features = ["derive"] }
simple_logger = "4.3.0"
subxt = { version = "0.33.0", features = ["sp-core", "substrate-compat"] }
subxt-signer = "0.33.0"
tracing = { version = "0.1.40", features = ["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.35.0", features = ["macros", "sync", "test-util"] }
log = "0.4.20"
thiserror = "1.0.50"
url = "2.5.0"
sp-core = "27.0.0"
